Replacing Saltboot or saltboot with attribute for uniformity.

--- a/modules/administration/pages/troubleshooting/tshoot-saltboot.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-saltboot.adoc
@@ -1,5 +1,5 @@
 [[troubleshooting-saltboot]]
-= Troubleshooting the Saltboot Formula
+= Troubleshooting the {saltboot} formula
 
 ////
 PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
@@ -19,7 +19,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 . Last step
 ////
 
-Because of a problem in the computed partition size value, the saltboot formula can sometimes fail when it is created on SLE{nbsp}11 SP3 clients, with an error like this:
+Because of a problem in the computed partition size value, the {saltboot} formula can sometimes fail when it is created on SLE{nbsp}11 SP3 clients, with an error like this:
 
 ----
           ID: disk1_partitioned
@@ -42,7 +42,7 @@ This problem can be resolved by manually configuring the size of the partition c
 When the size is set correctly, formula creation works as expected.
 
 
-.Procedure: Manually Configuring the Partition Size in the Saltboot Formula
+.Procedure: Manually Configuring the Partition Size in the {saltboot} Formula
 
 . In the {productname} {webui}, navigate to menu:Systems[System Groups] and select the ``Hardware Type Group`` that contains the SLE{nbsp}11 SP3 client that is causing the error.
     In the [guimenu]``Formulas`` tab, navigate to the [guimenu]``Saltboot`` subtab.
