--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -48,7 +48,7 @@ Follow guide xref:reference:systems/system-groups.adoc[] to create the system gr
 
 First group is generic optional group for collecting all POS terminals. Second group is hardware type group for our POS terminal. Third group is mandatory branch group.
 
-For more information about saltboot groups, see xref:retail:retail-install-setup.adoc[].
+For more information about {saltboot} groups, see xref:retail:retail-install-setup.adoc[].
 
 We assign [systemitem]``Saltboot Group`` formula to group [systemitem]``B0001`` we just created. With this, our branch group is converted to [systemitem]``Saltboot Group``.
 
@@ -78,9 +78,9 @@ Without this setting, newest built boot image is used as default boot image.
 
 If [systemitem]``Default boot image for new registrations`` is set, option to set its version appears under name [systemitem]``Default boot image version`` where specific image version can be set.
 
-=== Kernel option for the saltboot group
+=== Kernel option for the {saltboot} group
 
-Option [systemitem]``Kernel parameters for the group`` can be used to pass extra kernel options to all POS terminals registered withing this saltboot group.
+Option [systemitem]``Kernel parameters for the group`` can be used to pass extra kernel options to all POS terminals registered withing this {saltboot} group.
 
 === Naming scheme for new registrations
 
@@ -126,7 +126,7 @@ Non-Containerized workflow:
 . Apply [systemitem]``image-sync`` state on configured {productname} {smr} Branch server
 . Boot system to be deployed
 
-== Validating saltboot group configuration
+== Validating {saltboot} group configuration
 
 [systemitem]``Containerized Saltboot`` utilizes [systemitem]``Cobbler`` system underneath for managing PXE and UEFI configuration.
 
@@ -164,7 +164,7 @@ profiles:
    1-B0001
 ----
 
-When inspecting this new group using command [command]``cobbler profile report --name 1-B0001`` details of this profile reveal configuration of this saltboot group.
+When inspecting this new group using command [command]``cobbler profile report --name 1-B0001`` details of this profile reveal configuration of this {saltboot} group.
 
 ----
 # cobbler profile report --name 1-B0001
@@ -175,7 +175,7 @@ Distribution                   : 1-POS_Image_JeOS7-7.0.0-1
 Kernel Options                 : {'MASTER': ['downloadserver.example.org'], 'MINION_ID_PREFIX': ['B0001']}
 ----
 
-Kernel options in example are always present and are internal for saltboot functionality.
+Kernel options in example are always present and are internal for {saltboot} functionality.
 
 With this information [systemitem]``Cobbler`` is able to generate required PXE and UEFI Grub configurations which can be checked in [path]``/srv/tftpboot/pxelinux.cfg/default`` and [path]``/srv/tftpboot/grub/x86_64_menu_items.cfg``.
 
