--- a/modules/retail/pages/dedicated-with-scripts.adoc
+++ b/modules/retail/pages/dedicated-with-scripts.adoc
@@ -13,7 +13,7 @@ In this example we consider architecture with dedicated network for POS terminal
 
 For dedicated network we assume 192.168.86.0/24 network.
 
-In this example we provide [systemitem]``salt`` and [systemitem]``ftp`` CNAMEs for saltboot service discovery.
+In this example we provide [systemitem]``salt`` and [systemitem]``ftp`` CNAMEs for {saltboot} service discovery.
 
 We assume to have one regular branch server with salt minion id [systemitem]``branch1.mystore.com``, which is equal to the branch server fully qualified domain name, and branch id [systemitem]``B0001``.
 
