--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -92,21 +92,21 @@ Saltboot consists of:
 
 * Initialization:
 +
-The saltboot ``initrd`` is created during image building and is required for bootstrapping terminals.
+The {saltboot} ``initrd`` is created during image building and is required for bootstrapping terminals.
 
-* Saltboot state:
+* {saltboot} state:
 +
-The Salt state that contains the logic for the entire saltboot process.
+The {salt} state that contains the logic for the entire {saltboot} process.
 
 * Partitioning pillars:
 +
-The Salt pillar structure that describes how terminals are partitioned and what image is deployed on each terminal.
+The {salt} pillar structure that describes how terminals are partitioned and what image is deployed on each terminal.
 
 * Images and boot images pillars:
 +
-When the image building feature in {productname} successfully builds an image that contains the saltboot ``initrd``, the image and boot image Salt pillars are created.
+When the image building feature in {productname} successfully builds an image that contains the {saltboot} ``initrd``, the image and boot image Salt pillars are created.
 
 
-The saltboot process involves the {productname} Server, a terminal running the saltboot ``initrd``, and the branch server providing the saltboot services to the terminal.
+The {saltboot} process involves the {productname} Server, a terminal running the saltboot ``initrd``, and the branch server providing the {saltboot} services to the terminal.
 
-For a detailed diagram explaining how the saltboot boot process works, see xref:retail:retail-saltboot-diagram.adoc[].
+For a detailed diagram explaining how the {saltboot} boot process works, see xref:retail:retail-saltboot-diagram.adoc[].
