--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -13,7 +13,7 @@ This section covers how to configure your {productname} {smr} environment, inclu
 
 * Prepare POS images
 * Prepare system groups
-* Configure services for Saltboot
+* Configure services for {saltboot}
 * Synchronize POS images to the branch servers
 
 The very first time you set up the {productname} {smr} environment, you will need to perform all configuration steps.
@@ -106,7 +106,7 @@ For more information about system groups, see xref:reference:systems/system-grou
 During terminal bootstrap terminal automatically joins:
 
 - branch system group based on received [systemitem]``branch_id``. This will make branch group formulas available to the terminal.
-- HWType group based on SMBios information received from terminal. This will make saltboot partitioning pillar available to the terminal.
+- HWType group based on SMBios information received from terminal. This will make {saltboot} partitioning pillar available to the terminal.
 - [systemitem]``TERMINALS`` if this group exists.
 
 
@@ -127,17 +127,17 @@ In case you plan to use the branch server with Ansible software, be aware that A
 For more information about installing Ansible, see xref:administration:ansible-integration.adoc[].
 ====
 
-== Configure Services for Saltboot
+== Configure Services for {saltboot}
 
-Saltboot technology is used to deploy POS images to the terminals.
-Saltboot consists of saltboot enabled initrd (build as part of POS images) and saltboot Salt states.
+{saltboot} technology is used to deploy POS images to the terminals.
+{saltboot} consists of {saltboot} enabled initrd (build as part of POS images) and {saltboot} {salt} states.
 
-This section covers general information about generic Saltboot requirements.
+This section covers general information about generic {saltboot} requirements.
 For configuration examples, see xref:retail:example-configurations.adoc[].
 
 === Enable PXE network boot in the terminal network
 
-Saltboot is usually used in network boot environment.
+{saltboot} is usually used in network boot environment.
 For this to work [systemitem]``DHCP`` service for the network terminal is connected to must have [systemitem]``PXE`` or sometimes called [systemitem]``BOOTP`` support enabled.
 
 .Example of ISC DHCP server configuration with PXE booting enabled
@@ -167,30 +167,30 @@ Containerized branch proxy uses different [systemitem]``filename`` then regular 
 For containerized branch proxy set [systemitem]``filename`` to the [systemitem]``pxelinux.0`` for BIOS based system and [systemitem]``grub/shim.efi`` for UEFI systems with SecureBoot.
 ====
 
-=== Saltboot service discovery
+=== {saltboot} service discovery
 
-Saltboot requires some information where the Salt master is and from where to download the image.
-Saltboot tries multiple discoveries to obtain this information, described below.
+{saltboot} requires some information where the {salt} master is and from where to download the image.
+{saltboot} tries multiple discoveries to obtain this information, described below.
 
 For successful terminal deployment, both service discoveries must be successful.
 Depending on your architecture, choose what strategy works for you best.
 
-==== Salt master discovery
+==== {salt} master discovery
 
-During saltboot initrd start, integrated Salt client needs to find branch server proxy to connect to.
+During {saltboot} ``initrd`` start, integrated Salt client needs to find branch server proxy to connect to.
 This discovery is trying following steps:
 
 - [systemitem]``MASTER`` kernel command line option is set, then this is used as Salt master
 - resolve [systemitem]``salt`` CNAME, if successful then resolved value is used as Salt master
 - use [systemitem]``salt`` as a Salt master
 
-Once Salt master is determined, Salt client configuration is generated and started.
+Once {salt} master is determined, {salt} client configuration is generated and started.
 
 [IMPORTANT]
 ====
 Using fully qualified domain name in [systemitem]``MASTER`` or [systemitem]``salt`` CNAME is important.
 
-If used fully qualified domain name is different from fully qualified domain name of branch server proxy known to {productname}, saltboot may work correctly, however proxy detection of terminal will not work.
+If used fully qualified domain name is different from fully qualified domain name of branch server proxy known to {productname}, {saltboot} may work correctly, however proxy detection of terminal will not work.
 ====
 
 ==== Download server discovery
@@ -205,11 +205,11 @@ Value obtained by download server discovery is then used together with POS image
 
 === Terminal partitioning and image selection
 
-Last piece for Saltboot is to provide partitioning for terminal.
+Last piece for {saltboot} is to provide partitioning for terminal.
 This is done individually for each hardware type of terminals.
 For more information about hardware types, see xref:retail:retail-deploy-terminals.adoc[].
 
-Above mentioned steps are mandatory minimum for successful Saltboot deployment.
+Above mentioned steps are mandatory minimum for successful {saltboot} deployment.
 For configuration examples, see xref:retail:example-configurations.adoc[].
 
 == Synchronize Images to the Branch Server
