--- a/modules/retail/pages/dedicated-with-formulas.adoc
+++ b/modules/retail/pages/dedicated-with-formulas.adoc
@@ -13,7 +13,7 @@ In this example we consider architecture with dedicated network for POS terminal
 
 For dedicated network we assume 192.168.86.0/24 network.
 
-In this example we provide [systemitem]``salt`` and [systemitem]``ftp`` CNAMEs for saltboot service discovery.
+In this example we provide [systemitem]``salt`` and [systemitem]``ftp`` CNAMEs for {saltboot} service discovery.
 
 We assume to have one regular branch server with salt minion id [systemitem]``branch1.mystore.com``, which is equal to the branch server fully qualified domain name, and branch id [systemitem]``B0001``.
 
@@ -34,7 +34,7 @@ Follow guide xref:reference:systems/system-groups.adoc[] to create the system gr
 
 First group is generic optional group for collecting all POS terminals. Second group is hardware type group for our POS terminal. Third group is mandatory branch group.
 
-For more information about saltboot groups, see xref:retail:retail-install-setup.adoc[].
+For more information about {saltboot} groups, see xref:retail:retail-install-setup.adoc[].
 
 == Assign and configure branch server formulas
 
@@ -142,7 +142,7 @@ We assign following formulas to the branch server:
 
 Partitioning is specific to the hardware type and configured using [systemitem]``Saltboot`` formula.
 
-.Procedure: Assign Saltboot formula to hardware type group
+.Procedure: Assign {saltboot} formula to hardware type group
 
 . Navigate to menu:Systems[System Groups]
 . Select group [systemitem]``HWType:TerminalOEM-T1000``, which is our hardware type group
@@ -151,9 +151,9 @@ Partitioning is specific to the hardware type and configured using [systemitem]`
 . In displayed list select [systemitem]``Saltboot``
 . Save assigned formulas by clicking btn:[Save] in top right corner
 
-.Procedure: Configure Saltboot formula
+.Procedure: Configure {saltboot} formula
 
-. Select Saltboot formula from [systemitem]``HWType:TerminalOEM-T1000`` group formula list
+. Select {saltboot} formula from [systemitem]``HWType:TerminalOEM-T1000`` group formula list
 . Set [systemitem]``Disk Symbolic ID`` to [systemitem]``Disk1``
 . Set [systemitem]``Device Type`` to [systemitem]``DISK``
 . Set [systemitem]``Disk Device`` to [systemitem]``*``
