--- a/modules/retail/pages/shared-central-dns.adoc
+++ b/modules/retail/pages/shared-central-dns.adoc
@@ -11,7 +11,7 @@ To set up the {productname} {smr} environment, you will need to have already ins
 
 In this example we consider architecture with shared network between POS terminals, branch server and {productname} where branch server provides only PXE configuration and images.
 
-In this example we provide [systemitem]``salt`` on kernel command line option and [systemitem]``ftp`` in pillar for saltboot service discovery.
+In this example we provide [systemitem]``salt`` on kernel command line option and [systemitem]``ftp`` in pillar for {saltboot} service discovery.
 
 We assume to have one regular branch server with salt minion id [systemitem]``branch1.mystore.com``, which is equal to the branch server fully qualified domain name, and branch id [systemitem]``B0001``.
 
@@ -32,7 +32,7 @@ Follow guide xref:reference:systems/system-groups.adoc[] to create the system gr
 
 First group is generic optional group for collecting all POS terminals. Second group is hardware type group for our POS terminal. Third group is mandatory branch group.
 
-For more information about saltboot groups, see xref:retail:retail-install-setup.adoc[].
+For more information about {saltboot} groups, see xref:retail:retail-install-setup.adoc[].
 
 
 == Assign and configure formulas
