--- a/modules/retail/pages/dedicated-with-scripts.adoc
+++ b/modules/retail/pages/dedicated-with-scripts.adoc
@@ -93,7 +93,7 @@ Follow xref:reference:systems/system-groups.adoc[] to create [systemitem]``HWTyp
 
 Partitioning is specific to the hardware type and configured using [systemitem]``Saltboot`` formula.
 
-.Procedure: Assign Saltboot formula to hardware type group
+.Procedure: Assign {saltboot} formula to hardware type group
 
 . Navigate to menu:Systems[System Groups]
 . Select group [systemitem]``HWType:TerminalOEM-T1000``, which is our hardware type group
@@ -102,9 +102,9 @@ Partitioning is specific to the hardware type and configured using [systemitem]`
 . In displayed list select [systemitem]``Saltboot``
 . Save assigned formulas by clicking btn:[Save] in top right corner
 
-.Procedure: Configure Saltboot formula
+.Procedure: Configure {saltboot} formula
 
-. Select Saltboot formula from [systemitem]``HWType:TerminalOEM-T1000`` group formula list
+. Select {saltboot} formula from [systemitem]``HWType:TerminalOEM-T1000`` group formula list
 . Set [systemitem]``Disk Symbolic ID`` to [systemitem]``Disk1``
 . Set [systemitem]``Device Type`` to [systemitem]``DISK``
 . Set [systemitem]``Disk Device`` to [systemitem]``*``
