--- a/modules/retail/pages/retail-deploy-terminals-auto.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-auto.adoc
@@ -12,28 +12,28 @@ Only use this method on trusted networks.
 
 There are three different ways you can configure auto-signed grains:
 
-* Configure Saltboot to send automatically signed grains once and then delete them.
-  To do this, append the Saltboot configuration to an existing ``initrd``.
+* Configure {saltboot} to send automatically signed grains once and then delete them.
+  To do this, append the {saltboot} configuration to an existing ``initrd``.
   For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.once[].
 * Choose to keep the automatically signed grains on the Salt client.
   To do this, include the configuration file in the image source before the client image is built.
   After booting, the auto-signed grain is stored on the client as a regular Salt grain.
   For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.keep[].
-* Configure Saltboot during PXE boot using kernel parameters.
+* Configure {saltboot} during PXE boot using kernel parameters.
   For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.pxe[].
 
 
-When you have configured Saltboot using one of these methods, you need to configure the {productname} Server to accept them. For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.server[].
+When you have configured {saltboot} using one of these methods, you need to configure the {productname} Server to accept them. For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.server[].
 
 
 
 
 [[retail.deployterminals.auto.once]]
-== Configure Saltboot to Send Auto-Signed Grain Once
+== Configure {saltboot} to Send Auto-Signed Grain Once
 
 
 
-.Procedure: Configuring Saltboot to Send Auto-Signed Grain Once
+.Procedure: Configuring {saltboot} to Send Auto-Signed Grain Once
 . On the branch server, create a configuration file called [path]``/etc/salt/minion.d/autosign-grains-onetime.conf``.
 . Edit the new configuration file with these details.
   You can use any value you like as the auto-sign key:
@@ -57,14 +57,14 @@ cpio -H newc -o | gzip >> /srv/saltboot/boot/initrd.gz
 
 
 [[retail.deployterminals.auto.keep]]
-== Configure Saltboot to Keep Auto-Signed Grains
+== Configure {saltboot} to Keep Auto-Signed Grains
 
 Use different procedure for SLE 15 and SLE 11/12.
 
 
 
 // For SLE15 templates, the procedure is the following:
-.Procedure: Configuring Saltboot to Keep Auto-Signed Grains (SLE 15)
+.Procedure: Configuring {saltboot} to Keep Auto-Signed Grains (SLE 15)
 . In the location where the image source is built, such as a build host or source repository, create a configuration file called [path]``etc/salt/minion.d/autosign-grains.conf``.
 . Edit the new configuration file with these details.
   You can use any value you like as the auto-sign key:
@@ -82,7 +82,7 @@ autosign_grains:
 
 
 // For SLE12 and SLE11 templates, the procedure is the following:
-.Procedure: Configuring Saltboot to Keep Auto-Signed Grains (SLE 11 and SLE 12)
+.Procedure: Configuring {saltboot} to Keep Auto-Signed Grains (SLE 11 and SLE 12)
 . In the location where the image source is built, such as a build host or source repository, create a configuration file called [path]``etc/salt/minion.d/autosign-grains.conf``.
   This must be outside of the [path]``root`` directory provided by the template.
   This way you prevent the inclusion of unwanted files in the ``initrd``.
@@ -117,11 +117,11 @@ tar -czf autosign-grains.tgz etc
 
 
 [[retail.deployterminals.auto.pxe]]
-== Configure Saltboot to Auto-Sign During PXE Boot
+== Configure {saltboot} to Auto-Sign During PXE Boot
 
 
 
-.Procedure: Configuring Saltboot to Auto-Sign During PXE Boot
+.Procedure: Configuring {saltboot} to Auto-Sign During PXE Boot
 . Configure the PXE formula to specify these kernel parameters during booting:
 +
 ----
@@ -135,9 +135,9 @@ SALT_AUTOSIGN_GRAINS=autosign_key:<AUTOSIGN_KEY>
 [[retail.deployterminals.auto.server]]
 == Configure the Server to Auto-Accept
 
-When you have configured Saltboot using one of these methods, you need to configure the server to accept them.
+When you have configured {saltboot} using one of these methods, you need to configure the server to accept them.
 The server stores the autosign keys in a file within the [path]``/etc/salt/master.d/`` directory.
-You can enable auto-signing by creating an auto-sign file that contains the key you created when you configured Saltboot.
+You can enable auto-signing by creating an auto-sign file that contains the key you created when you configured {saltboot}.
 
 
 
@@ -147,7 +147,7 @@ You can enable auto-signing by creating an auto-sign file that contains the key 
 ----
 autosign_grains_dir: /etc/salt/autosign_grains
 ----
-. Create a file at [path]``/etc/salt/autosign_grains/autosign_key``, that contains the auto-sign key you specified with Saltboot:
+. Create a file at [path]``/etc/salt/autosign_grains/autosign_key``, that contains the auto-sign key you specified with {saltboot}:
 +
 ----
 <AUTOSIGN_KEY>
