--- a/modules/specialized-guides/pages/salt/salt-formula-bind.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-bind.adoc
@@ -2,7 +2,7 @@
 = Bind Formula
 
 The Bind formula is used to configure the Domain Name System (DNS) on the branch server.
-POS terminals will use the DNS on the branch server for name resolution of saltboot specific hostnames.
+POS terminals will use the DNS on the branch server for name resolution of {saltboot} specific hostnames.
 
 When you are configuring the Bind formula for a branch server with a dedicated internal network, check that you are using the same fully qualified domain name (FQDN) on both the external and internal branch networks.
 If the FQDN does not match on both networks, the branch server will not be recognized as a proxy server.
@@ -14,7 +14,7 @@ Adjust it to suit your own environment.
 ====
 
 Zone 1 is a regular domain zone.
-Its main purpose is to resolve saltboot hostnames such as TFTP, FTP, or Salt.
+Its main purpose is to resolve {saltboot} hostnames such as TFTP, FTP, or Salt.
 It can also resolve the terminal names if configured.
 
 Zone 2 is the reverse zone of Zone 1.
