--- a/modules/retail/pages/retail-deploy-terminals-other.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-other.adoc
@@ -51,10 +51,8 @@ dd bs=1M if=<usb image name> of=<path to usb device>
 
 
 When you have the image on the USB drive, check that the terminals you want to deploy allow local booting.
-You can check this by editing the Saltboot formula in the {productname} {smr} {webui}.
-For more information about the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
-
-
+You can check this by editing the {saltboot} formula in the {productname} {smr} {webui}.
+For more information about the {saltboot} formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 .Procedure: Deploying Images to the Terminals using USB
 . Insert the USB device into the terminal.
@@ -76,7 +74,7 @@ For more information about using USB devices to boot, see xref:retail:retail-dep
 Bootstrapping across a wireless network could expose a security risk if you are using encrypted OS images.
 The boot ``initrd`` image and the partition that contains ``/etc/salt`` must be stored unencrypted on the terminal.
 This allows {productname} {smr} to set up the wireless network.
-If this breaches your security requirements, you will need to use a separate production network, with network credentials managed by Salt, so that credentials are not stored on the terminal unencrypted.
+If this breaches your security requirements, you will need to use a separate production network, with network credentials managed by {salt}, so that credentials are not stored on the terminal unencrypted.
 ====
 
 
@@ -122,9 +120,8 @@ WIRELESS_WPA_PSK=<wireless network password>
 echo ./etc/sysconfig/network/ifcfg-wlan0 | cpio -H newc -o | gzip >> /srv/saltboot/boot/initrd.gz
 ----
 . Check that the terminals you want to deploy allow local booting.
-  You can check this by editing the Saltboot formula in the {productname} {smr} {webui}.
-  For more information about the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
-
+  You can check this by editing the {saltboot} formula in the {productname} {smr} {webui}.
+  For more information about the {saltboot} formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 
 .Procedure: Providing Wireless Credentials During Terminal Boot
@@ -165,7 +162,7 @@ The way to do this is different if you use one company-wide network, or if you h
   cmd.run:
   - name: 'mkinitrd'
 ----
-. Apply the Salt state to the terminal:
+. Apply the {salt} state to the terminal:
 +
 ----
 salt <terminal_salt_name> state.apply update-terminal-credentials
@@ -184,16 +181,16 @@ You can configure terminals to use a different set of wireless credentials durin
 
 If you provide wireless credentials using ``initrd`` files, you can create two different files, one for use during boot called ``initrd-ifcfg-wlan0``, and the other for use during normal operation, called ``ifcfg-wlan0``.
 
-Alternatively, you can use custom Salt states to manage wireless credentials with ``saltboot-hook``.
+Alternatively, you can use custom {salt} states to manage wireless credentials with ``saltboot-hook``.
 
 First of all, you need to set the wireless details for normal operation.
 This will become the default settings.
-Then you can specify a second Salt state with the wireless details for use during the boot procedure.
+Then you can specify a second {salt} state with the wireless details for use during the boot procedure.
 
 
 .Procedure: Using Different Wireless Credentials for Production Network
-. Write a custom Salt state named ``/srv/salt/saltboot_hook.sls`` containing the wireless details for normal operation.
-    This Salt state is applied by Saltboot after the system image is deployed.
+. Write a custom {salt} state named ``/srv/salt/saltboot_hook.sls`` containing the wireless details for normal operation.
+    This {salt} state is applied by {saltboot} after the system image is deployed.
 +
 ----
 {% set root = salt['environ.get']('NEWROOT') %}
@@ -212,5 +209,5 @@ Then you can specify a second Salt state with the wireless details for use durin
 [NOTE]
 ====
 The boot phase supports only WPA2 PSK wireless configuration.
-Salt-managed production configuration supports all features supported by all major operating systems.
+{salt}-managed production configuration supports all features supported by all major operating systems.
 ====
