--- a/modules/specialized-guides/pages/salt/salt-formula-saltboot.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-saltboot.adoc
@@ -1,23 +1,24 @@
 [[saltboot-formula]]
-= Saltboot Formula
+= {saltboot} Formula
 
-The Saltboot formula is used to configure disk images and partitioning for the selected hardware type.
-
-[IMPORTANT]
-====
-The Saltboot formula is meant to be used as a group formula.
-Enable and configure Saltboot formula for hardware type groups.
-====
+The {saltboot} formula is used to configure disk images and partitioning for the selected hardware type.
 
 [IMPORTANT]
 ====
-To apply changes to a terminal, terminal needs to be restarted. Applying highstate does not have any effect on running terminals.
+The {saltboot} formula is meant to be used as a group formula.
+Enable and configure {saltboot} formula for hardware type groups.
 ====
 
-.Procedure: Configuring the Hardware Type Group with Saltboot
+[IMPORTANT]
+====
+To apply changes to a terminal, terminal needs to be restarted. 
+Applying highstate does not have any effect on running terminals.
+====
+
+.Procedure: Configuring the Hardware Type Group with {saltboot}
 
 . Open the details page for your new hardware type group, and navigate to the [guimenu]``Formulas`` tab.
-. Select the Saltboot formula and click btn:[Save].
+. Select the {saltboot} formula and click btn:[Save].
 . Navigate to the menu:Formulas[Saltboot] tab.
 . In the [guimenu]``Disk 1`` section, set these parameters:
 * In the [guimenu]``Disk symbolic ID`` field, enter a custom name for the disk (for example, [systemitem]``disk1``).
@@ -67,7 +68,7 @@ To apply changes to a terminal, terminal needs to be restarted. Applying highsta
 [[saltboot-formula-partition-types]]
 == Special Partition Types
 
-The Saltboot formula helps you with setting up special partition types.
+The {saltboot} formula helps you with setting up special partition types.
 
 [IMPORTANT]
 ====
@@ -108,7 +109,7 @@ Partition Flags: boot
 Leave the other fields empty.
 
 [[saltboot-formula-disk-selection]]
-== Disk Selection in Saltboot Formula
+== Disk Selection in {saltboot} Formula
 
 When there is only one disk present on target hardware (including USB drives), use an asterisk [systemitem]``*`` to automatically select the disk device.
 
@@ -133,7 +134,7 @@ To see a list of available devices from the command prompt, press kbd:[Esc] whil
 
 
 
-== Troubleshooting the Saltboot Formula
+== Troubleshooting the {saltboot} Formula
 
 ``msdos`` Disklabel Limitations::
 
@@ -141,4 +142,4 @@ On the ``msdos`` disk label, you can create a maximum of four primary partition
 Extended partitions are not supported.
 If you need more than four partitions, use the ``GPT`` disk label instead.
 
-For more information on troubleshooting problems with the Saltboot formula, see xref:administration:troubleshooting/tshoot-saltboot.adoc[].
+For more information on troubleshooting problems with the {saltboot} formula, see xref:administration:troubleshooting/tshoot-saltboot.adoc[].
