--- a/modules/retail/pages/shared-central-dns.adoc
+++ b/modules/retail/pages/shared-central-dns.adoc
@@ -84,7 +84,7 @@ Group formulas are visible as assigned also on system level, but editing them wi
 
 Assign [systemitem]``Saltboot Group`` formula to the [systemitem]``B0001`` group and [systemitem]``Saltboot`` formula to the [systemitem]``HWType:TerminalOEM-T1000`` group.
 
-.Procedure: Assign Saltboot Group formula to Branch group
+.Procedure: Assign {saltboot} Group formula to Branch group
 
 . Navigate to menu:Systems[System Groups]
 . Select group [systemitem]``B0001`, which is our branch group
@@ -93,14 +93,14 @@ Assign [systemitem]``Saltboot Group`` formula to the [systemitem]``B0001`` group
 . In displayed list select [systemitem]``Saltboot Group``
 . Save assigned formulas by clicking btn:[Save] in the top right corner
 
-.Procedure: Configure Saltboot Group formula
+.Procedure: Configure {saltboot} Group formula
 
-. Select Saltboot Group formula from [systemitem]``B0001`` group formula list
+. Select {saltboot} Group formula from [systemitem]``B0001`` group formula list
 . Set [systemitem]``Image download server`` to [systemitem]``branch1.mystore.com``
 . Unselect [systemitem]``Branch server is containerized proxy`` because this is not containerized proxy
 . Save the formula
 
-.Procedure: Assign Saltboot formula to hardware type group
+.Procedure: Assign {saltboot} formula to hardware type group
 
 . Navigate to menu:Systems[System Groups]
 . Select group [systemitem]``HWType:TerminalOEM-T1000``, which is our hardware type group
@@ -109,9 +109,9 @@ Assign [systemitem]``Saltboot Group`` formula to the [systemitem]``B0001`` group
 . In displayed list select [systemitem]``Saltboot``
 . Save assigned formulas by clicking btn:[Save] in top right corner
 
-.Procedure: Configure Saltboot formula
+.Procedure: Configure {saltboot} formula
 
-. Select Saltboot formula from [systemitem]``HWType:TerminalOEM-T1000`` group formula list
+. Select {saltboot} formula from [systemitem]``HWType:TerminalOEM-T1000`` group formula list
 . Set [systemitem]``Disk Symbolic ID`` to [systemitem]``Disk1``
 . Set [systemitem]``Device Type`` to [systemitem]``DISK``
 . Set [systemitem]``Disk Device`` to [systemitem]``*``
