--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -52,11 +52,12 @@ For more information about {saltboot} groups, see xref:retail:retail-install-set
 
 We assign [systemitem]``Saltboot Group`` formula to group [systemitem]``B0001`` we just created. With this, our branch group is converted to [systemitem]``Saltboot Group``.
 
-== Saltboot group
+
+== {saltboot} group
 
 Containerized {productname} {smr} is configured in [systemitem]``Saltboot Group``.
 
-Saltboot Groups are branch groups, system group with branch id as its name, with [systemitem]``Saltboot Group`` formula enabled.
+{saltboot} Groups are branch groups, system group with branch id as its name, with [systemitem]``Saltboot Group`` formula enabled.
 
 image::saltboot_group.png[scaledwidth=80%]
 
@@ -90,7 +91,7 @@ See xref:retail-terminal-names.adoc[] for explanation of possible configurations
 
 == Comparing containerized and non-containerized workflows
 
-External DHCP service must be used with containerized Saltboot.
+External DHCP service must be used with containerized {saltboot}.
 
 For more information about how to enable PXE booting in DHCP service, see xref:retail:retail-install-setup.adoc[].
 
@@ -102,7 +103,7 @@ Containerized proxy is not a Salt client, it is not possible to call [systemitem
 
 [IMPORTANT]
 ====
-Once POS image is build and made available on {productname} Server, it is immediately available to the Saltboot clients as well. Image synchronization is not needed, nor available.
+Once POS image is build and made available on {productname} Server, it is immediately available to the {saltboot} clients as well. Image synchronization is not needed, nor available.
 This may have implications on how images are deployed to production.
 ====
 
