--- a/modules/retail/pages/example-configurations.adoc
+++ b/modules/retail/pages/example-configurations.adoc
@@ -5,16 +5,16 @@ This section contains some example configurations using various configuration te
 
 * xref:retail:dedicated-with-formulas.adoc[]
 +
-Manual configuration of all branch services using formulas with forms to configure Saltboot with dedicated network for POS terminals.
+Manual configuration of all branch services using formulas with forms to configure {saltboot} with dedicated network for POS terminals.
 
 * xref:retail:dedicated-with-scripts.adoc[]
 +
-Automatic configuration of all branch services using {productname} {smr} scripts to configure Saltboot with dedicated network for POS terminals.
+Automatic configuration of all branch services using {productname} {smr} scripts to configure {saltboot} with dedicated network for POS terminals.
 * xref:retail:shared-central-dns.adoc[]
 
 +
-Configuration of basic branch services using formulas with forms to configure Saltboot in shared network environment.
+Configuration of basic branch services using formulas with forms to configure {saltboot} in shared network environment.
 
 * xref:retail:containerized-saltboot.adoc[]
 +
-Configuration of Saltboot using containerized proxy.
+Configuration of {saltboot} using containerized proxy.
