--- a/modules/retail/pages/retail-formulas-intro.adoc
+++ b/modules/retail/pages/retail-formulas-intro.adoc
@@ -50,5 +50,5 @@ The highstate propagates your changes to the appropriate services.
 
 == Partitioning and Image Deployment Formula
 
-Use the Saltboot formula to specify disk partitioning, and to select which image should be deployed.
-For more information about the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
+Use the {saltboot} formula to specify disk partitioning, and to select which image should be deployed.
+For more information about the {saltboot} formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
