--- a/modules/retail/pages/retail-offline.adoc
+++ b/modules/retail/pages/retail-offline.adoc
@@ -13,8 +13,8 @@ If the {productname} Server is offline, and a terminal is rebooted, it will fall
 
 This will occur in these situations:
 
-* If the Saltboot formula has not started within a specified time (default value is 60 seconds).
-* If the terminal does not acknowledge that the Saltboot formula has started.
+* If the {saltboot} formula has not started within a specified time (default value is 60 seconds).
+* If the terminal does not acknowledge that the {saltboot} formula has started.
 * If the root partition is specified on the kernel command line (handled by the PXE formula), is mountable (and is not encrypted), and contains [path]``/etc/ImageVersion`` (which is created by Kiwi).
 
 You can adjust the timeout value by changing the [parameter]``SALT_TIMEOUT`` kernel parameter.
@@ -35,7 +35,7 @@ The upgrade can then performed on the terminals when suitable.
 
 This functionality requires the terminal to have a dedicated service partition. A service partition is a partition mounted as `/srv/saltboot`.
 This partition must be created before the system partition and large enough to store a POS image.
-To ensure that terminals will always have such a partition, use the Saltboot formula for terminal hardware type to specify the partition details.
+To ensure that terminals will always have such a partition, use the {saltboot} formula for terminal hardware type to specify the partition details.
 For more information, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 When the service partition is set up on the terminal, a POS image can be downloaded in advance by applying the `saltboot.cache_image` state:
