--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -40,8 +40,8 @@ While both of these terminals require similar processing and network functionali
 The OS images ensure that the different display mechanisms work correctly.
 
 {productname} {smr} supports POS terminals that boot using both BIOS and UEFI.
-For UEFI booting terminals, you will need to configure the EFI partition in the Saltboot formula.
-For more information on EFI in the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
+For UEFI booting terminals, you will need to configure the EFI partition in the {saltboot} formula.
+For more information on EFI in the {saltboot} formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 
 
@@ -76,19 +76,19 @@ The Branch ID is used in formulas and scripts to automatically update the entire
 Formulas are pre-written Salt states, that are used to configure your installation.
 
 You can use formulas to apply configuration patterns to your hardware groups.
-{productname} {smr} uses the Saltboot formula, which defines partitioning and OS images for terminals.
+{productname} {smr} uses the {saltboot} formula, which defines partitioning and OS images for terminals.
 
 You can use default settings for formulas, or edit them to make them more specific to your environment.
 
 For more information about formulas, see xref:retail:retail-formulas-intro.adoc[].
 
 
+[[saltboot]]
+=== {saltboot}
 
-=== Saltboot
+{saltboot} is a collection of tools and processes that are used to bootstrap, deploy and validate {productname} {smr} terminals.
 
-Saltboot is a collection of tools and processes that are used to bootstrap, deploy and validate {productname} {smr} terminals.
-
-Saltboot consists of:
+{saltboot} consists of:
 
 * Initialization:
 +
