--- a/modules/retail/pages/retail-terminal-ratelimiting.adoc
+++ b/modules/retail/pages/retail-terminal-ratelimiting.adoc
@@ -11,7 +11,7 @@ For more information about rate limiting on terminals, see xref:specialized-guid
 
 ==  Troubleshooting
 
-Sometimes when attempting to reboot a terminal after attempting to apply the Saltboot formula, the terminal will hang at the boot screen.
+Sometimes when attempting to reboot a terminal after attempting to apply the {saltboot} formula, the terminal will hang at the boot screen.
 This can be caused by a presence ping timeout value being set at a value that is too low.
 You can adjust the presence ping timeout value to fix this problem.
 
