Apply suggestions from code review
Co-authored-by: Ondřej Holeček <oholecek@aaannz.eu>

--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -55,7 +55,7 @@ There are multiple methods to control the image version within the HWTYPE and TE
   * Mark the new image as ``inactive`` after building and before synchronizing it to Branch Server.
   * The ``inactive` flag ensures, that the image is not auto-selected when the image version is not specified.
   * After testing, remove the ``inactive`` flag so the image can be auto-selected in HWTYPE group.
-  * The ``inactive`` flag can be accessed through the XML-RPC API, see xref:retail-image-pillar.adoc[Image Pillar]
+  * The ``inactive`` flag can be accessed through the API, see xref:retail-image-pillar.adoc[Image Pillar]
 
 *  Utilize ``Freeze Image`` Flag:
 
