--- a/modules/retail/pages/retail-image-pillar.adoc
+++ b/modules/retail/pages/retail-image-pillar.adoc
@@ -65,7 +65,7 @@ file name, and an inactive flag to exclude it from auto-selection. Additionally,
 
 The ``boot_images`` section contains information about the boot image ``POS_Image_JeOS7-7.1.0-1.`` It specifies the details about kernel and initrd.
 
-Image pillar can be modified via XML-RPC API. This example retrieves image pillar for given image ID, changes the ``inactive`` flag to `True``
+Image pillar can be modified via API. This example retrieves image pillar for given image ID, changes the ``inactive`` flag to `True``
 and writes it back.
 
 ```
