--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -115,10 +115,10 @@ SUSEConnect -e <EMAIL_ADDRESS> -r <SUSE_MANAGER_CODE> \
 +
 
 ----
-SUSEConnect -p sle-module-basesystem/15.5/x86_64
-SUSEConnect -p sle-module-server-applications/15.5/x86_64
-SUSEConnect -p sle-module-web-scripting/15.5/x86_64
-SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
+SUSEConnect -p sle-module-basesystem/15.4/x86_64
+SUSEConnect -p sle-module-server-applications/15.4/x86_64
+SUSEConnect -p sle-module-web-scripting/15.4/x86_64
+SUSEConnect -p sle-module-suse-manager-server/
 ----
 +
 {minimalsles} is configured to install only required packages.
